# MiniAgent

./: .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Modelfile  README.es.md  README.fr.md  README.ko.md  README.md  README.nl.md  README.ru.md  README.zh.md  SECURITY.md  pyproject.toml  requirements.txt
.claude/commands/: analyze.md  audit.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  platform_request.md
.github/workflows/: ci.yml
docs/wiki/: Cross-Platform-Terms.md  GAQL-Reference.md  Home.md
eval/: advertising_bench.py
examples/: quickstart.py
examples/awesome-llm-apps/: README.md
hub/: __init__.py
hub/adroll/: __init__.py
hub/amazon/: __init__.py
hub/criteo/: __init__.py
hub/google/: __init__.py
hub/linkedin/: __init__.py
hub/meta/: __init__.py
hub/microsoft/: __init__.py
hub/pinterest/: __init__.py
hub/quora/: __init__.py
hub/reddit/: __init__.py
hub/snapchat/: __init__.py
hub/tiktok/: __init__.py
hub/tradedesk/: __init__.py
hub/twitter/: __init__.py
locales/es/: README.md
locales/it/: README.md
locales/ru/: README.md
locales/zh/: README.md
mcp/adroll/: __init__.py  __main__.py
mcp/amazon_ads/: __init__.py  __main__.py
mcp/criteo/: __init__.py  __main__.py
mcp/google_ads/: __init__.py  __main__.py
mcp/linkedin_ads/: __init__.py  __main__.py
mcp/meta_ads/: __main__.py
mcp/microsoft_ads/: __init__.py  __main__.py
mcp/pinterest_ads/: __init__.py  __main__.py
mcp/quora_ads/: __main__.py
mcp/reddit_ads/: __main__.py
mcp/snapchat_ads/: __init__.py  __main__.py
mcp/tiktok_ads/: __main__.py
mcp/tradedesk/: __main__.py
mcp/twitter_ads/: __main__.py
miniagent/: __init__.py  __main__.py  chat.py  cli.py  learning.py  rag.py
model/: LMConfig.py  model_miniagent.py
scripts/: blog_training_data.py  convert_model.py  convert_to_gguf.py  download_data.py  one_click_install.sh  platform_training_data.py  serve_openai_api.py  train_and_deploy.sh  web_demo.py
tests/: test_eval.py  test_mcp.py  test_model.py
trainer/: dpo.py  lora.py  pretrain.py  sft.py
(+29 files in other folders)
